oia deployment response file separated. Added deploy-analytics workflow